--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^2.0.0-rc.2",
+    "@mdx-js/react": "^2.0.0-rc.2",
+    "@reach/disclosure": "^0.16.2",
+    "@reach/tooltip": "^0.16.2",
+    "gray-matter": "^4.0.3",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "remark-frontmatter": "^4.0.1"
   },
   "devDependencies": {
     "eslint": "8.10.0",
